--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@angular/common": "~13.2.0",
     "@angular/compiler": "~13.2.0",
     "@angular/core": "~13.2.0",
-    "@angular/fire": "^7.2.0",
+    "@angular/fire": "^7.0.4",
     "@angular/forms": "~13.2.0",
+    "@angular/material": "^13.2.1",
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "bootstrap": "^5.1.3",
     "firebase": "^9.6.6",
+    "firebase-tools": "^10.1.5",
+    "jquery": "^3.6.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
